--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^10.3.1",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "firebase": "^7.14.4",
     "jwt-decode": "^2.2.0",
     "material-table": "^1.57.2",
     "react": "^16.13.1",
